[tool.poetry]
name = "Fabricius"
version = "0.3.0.dev2"
description = "Fabricius: The supportive templating engine for Python!"
license = "MIT"
authors = ["Julien Mauroy <pro.julien.mauroy@gmail.com>"]
readme = "README.md"
repository = "https://github.com/madebylydia/Fabricius"
documentation = "https://fabricius.readthedocs.org"
keywords = ["cookiecutter", "template", "project", "scaffold", "pyscaffold"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",

    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",

    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",

    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: Implementation :: CPython",
    "Operating System :: OS Independent",

    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Utilities",

    "Typing :: Typed",
]

packages = [
    { include = "fabricius", from = "src" },
]

include = ["README.md", "LICENSE"]

[tool.poetry.dependencies]
python = "^3.12"
chevron = "^0.14.0"
rich = "^13.7.0"
inflection = "^0.5.1"
click = "^8.1.7"
jinja2 = "^3.1.2"
jinja2-time = "^0.2.0"
slugify = "^0.0.1"
platformdirs = "^4.1.0"
clickloader = "^0.2.0"
pydantic = "^2.5.2"
gitpython = "^3.1.40"
aspreno = "^1.0.0.dev2"

[tool.poetry.scripts]
fabricius = 'fabricius.cli:main'

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
Sphinx = "^7.2.6"
sphinx-autobuild = "^2021.3.14"
pydata-sphinx-theme = "^0.14.4"
sphinx-design = "^0.5.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.13.0"
pre-commit = "^3.6.0"
mypy = "^1.7.1"
tox = "^4.11.4"
types-chevron = "^0.14.2.5"
esbonio = "^0.16.3"
pytest = "^7.3.1"
poethepoet = "^0.24.4"
pytest-pretty = "^1.2.0"
pytest-html = "^4.1.1"
pytest-cov = "^4.1.0"
ruff = "^0.1.7"
types-pyyaml = "^6.0.12.12"
pylint = "^3.0.3"
pylint-pydantic = "^0.3.2"

[tool.poetry.group.actions]
optional = true

[tool.poetry.group.actions.dependencies]
tox-gh-actions = "^3.1.3"


[tool.poetry.group.sentry.dependencies]
sentry-sdk = "^1.39.1"

[tool.poe]
poetry_command = ""

[tool.poe.tasks]
_format_black = "black ."
_format_isort = "isort ./src ./tests ./typings"
_ruff = "ruff ./src/fabricius"
_mypy = "mypy -p fabricius --enable-incomplete-feature=Unpack"
format = ["_format_black", "_format_isort"]
test = "pytest . --verbose --html=tests/report/index.html --cov-config=.coveragerc --cov-context=test --cov-report=html --cov=src/fabricius"
lint = ["_ruff", "_mypy"]

[tool.poe.tasks.docs]
cmd = "make livehtml"
cwd = "./docs"

[tool.poe.tasks.docscov]
cmd = "make html -b coverage"
cwd = "./docs"

[tool.black]
target-version = ["py312"]
line-length = 99

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
